# physics-engine

./: '  .clang-format  .gitignore  CMakeLists.txt  README.md  VS  camera.c  camera.h  convert.py  shader.c  shader.h  texture.c  texture.h
configs/: colors.json  default.json  generate.py  icosphere.json  saved.json  spin.json  test.json
include/: cJSON.h
include/glad/: glad.h
libs/: glad.c
src/: main.c  simulation.c  simulation.h
src/physics/: cube.c  cube.h  floor.c  object.c  object.h  particle.c  particle.h  physics.c  physics.h  pyramid.c  pyramid.h  sphere.c  sphere.h  tetrahedron.c  tetrahedron.h
src/physics/objects/: cube.c  cube.h  floor.c  floor.h  sphere.c  sphere.h  tetrahedron.c  tetrahedron.h
src/render/: camera.c  camera.h  floor.c  floor.h  render.c  render.h  shader.c  shader.h  shadow.c  shadow.h  text.c  text.h  texture.c  texture.h
src/render/shaders/: default-fs.glsl  default-vs.glsl  default.fs  default.vs  floor.fs  floor.vs  particle.fs  particle.vs  shadow-fs.glsl  shadow-vs.glsl  shadow.fs  shadow.vs  simple.fs  sphere.fs  sphere.vs
src/utils/: cJSON.c  callbacks.c  callbacks.h  framebuffer.c  framebuffer.h  parse.c  parse.h  quat.c  quat.h  save.c  save.h
